--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,18 @@
   background-color: #111;
   color: #fff;
 
+  &::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: rgb(0 0 0 / 50%);
+    /* z-index: 1px; */
+  }
+
   button {
     background: none;
     border: none;
@@ -179,7 +191,7 @@
         backdrop-filter: blur(30px) saturate(200%);
       }
 
-      &::after {
+      /* &::after {
         background: linear-gradient(
           0deg,
           rgba(0, 0, 0, 0.8) 0%,
@@ -187,7 +199,7 @@
           rgba(0, 0, 0, 0.1) 90%,
           rgba(0, 0, 0, 0) 100%
         );
-      }
+      } */
     }
 
     .video-status-wrapper {
@@ -316,7 +328,7 @@
         backdrop-filter: blur(30px) saturate(200%);
       }
 
-      &::after {
+      /* &::after {
         background: linear-gradient(
           180deg,
           rgba(0, 0, 0, 0.5) 0%,
@@ -324,7 +336,7 @@
           rgba(0, 0, 0, 0.1) 75%,
           rgba(0, 0, 0, 0) 100%
         );
-      }
+      } */
     }
   }
 }
