--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,11 @@
 .popover-container {
   width: 300px;
   height: 200px;
-  background: #333;
+  padding: 5px;
+  border-radius: 10px;
+  background-color: rgb(35 35 35 / 80%);
+  backdrop-filter: blur(10px);
+  
 }
 
 .player-container {
