--- a/styles.css
+++ b/styles.css
@@ -55,13 +55,13 @@
 }
 
 .popover-container {
-  width: 300px;
-  height: 200px;
+  width: 500px;
+  height: 400px; 
   padding: 5px;
   border-radius: 10px;
   background-color: rgb(35 35 35 / 80%);
-  backdrop-filter: blur(10px);
-  
+  backdrop-filter: blur(20px) saturate(120%);
+  box-shadow: 0 0 0 1px rgb(90 90 90), 0 0 0 2px #252525cf;
 }
 
 .player-container {
